[gd_scene load_steps=18 format=3 uid="uid://btg8p0hsq3qxe"]

[ext_resource type="Script" path="res://scripts/UI/base_paralax2.gd" id="1_a80hw"]
[ext_resource type="Texture2D" uid="uid://bqincbyvrk1a0" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/Gradient (z -6).png" id="2_dguok"]
[ext_resource type="Texture2D" uid="uid://cyo0xp141heyj" path="res://asset/Tileset/hca.png" id="2_mt3nd"]
[ext_resource type="Texture2D" uid="uid://bsgg5lwuokmnt" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/mtn (z -4).png" id="3_2ysam"]
[ext_resource type="Texture2D" uid="uid://wt4k7gswsl8k" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/sky (z -3).png" id="4_k85db"]
[ext_resource type="Texture2D" uid="uid://dgboygq2gyn8l" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/bg_2 (z -2).png" id="5_mkytf"]
[ext_resource type="Texture2D" uid="uid://ftjdsb2ldgg8" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/bg_1 (z -1).png" id="6_xg4qa"]
[ext_resource type="Script" path="res://scripts/UI/front_paralax2.gd" id="7_r1or5"]
[ext_resource type="Texture2D" uid="uid://bm2kmxva0vht1" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/middleground (z 0).png" id="8_5pdkb"]
[ext_resource type="Texture2D" uid="uid://1c78nr4twjv" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/middleplus (z 1).png" id="9_cfnke"]
[ext_resource type="FontFile" uid="uid://cp8xob43orb1" path="res://asset/fonts/PixelOperator8.ttf" id="10_j56nl"]
[ext_resource type="Script" path="res://scripts/UI/levelselect/selection.gd" id="12_dgewl"]
[ext_resource type="PackedScene" uid="uid://d2vxem866ukmc" path="res://scenes/UI/levelselect/world_icon.tscn" id="13_2hqtj"]
[ext_resource type="PackedScene" uid="uid://dph1mgrxsommr" path="res://scenes/UI/levelselect/player_icon.tscn" id="14_yf1as"]
[ext_resource type="Texture2D" uid="uid://d0v1r4bprnhdp" path="res://asset/GUI/kenney_onscreen-controls/Sprites/flat-light/flatLight47.png" id="15_mr3iq"]
[ext_resource type="Texture2D" uid="uid://btfmegwpc3d07" path="res://asset/GUI/kenney_onscreen-controls/Sprites/flat-dark/flatDark48.png" id="16_54nbn"]
[ext_resource type="PackedScene" uid="uid://cqas3f3vaheuy" path="res://scenes/UI/in_game_ui.tscn" id="17_qnq0s"]

[node name="selection_menu" type="Node2D" groups=["Level_Select"]]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="base_paralax" type="ParallaxBackground" parent="CanvasLayer"]
scroll_ignore_camera_zoom = true
script = ExtResource("1_a80hw")

[node name="ParallaxLayer6" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
position = Vector2(-34, -101)
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer6"]
position = Vector2(34, 101)
scale = Vector2(0.787208, 0.757202)
texture = ExtResource("2_mt3nd")
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
visible = false
position = Vector2(-34, -101)
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer"]
position = Vector2(-4, -2.99997)
scale = Vector2(0.604167, 0.729)
texture = ExtResource("2_dguok")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
visible = false
position = Vector2(-34, -101)
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer2"]
position = Vector2(-654, 48)
scale = Vector2(1.48892, 1.85114)
texture = ExtResource("3_2ysam")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
visible = false
position = Vector2(-34, -101)
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(5000, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer3"]
position = Vector2(-2833, 2)
scale = Vector2(1, 1.19236)
texture = ExtResource("4_k85db")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
visible = false
position = Vector2(-34, -101)
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(5000, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer4"]
position = Vector2(1960, 422.75)
scale = Vector2(1.12643, 1.2168)
texture = ExtResource("5_mkytf")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
visible = false
position = Vector2(-34, -101)
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(5000, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer5"]
position = Vector2(1676, 452)
texture = ExtResource("6_xg4qa")

[node name="front_paralax" type="ParallaxBackground" parent="CanvasLayer"]
layer = 0
visible = false
scroll_ignore_camera_zoom = true
script = ExtResource("7_r1or5")

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/front_paralax"]
position = Vector2(-34, -101)
motion_scale = Vector2(3, 3)
motion_mirroring = Vector2(5000, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/front_paralax/ParallaxLayer"]
position = Vector2(-3077, -21.9999)
scale = Vector2(0.764322, 0.698955)
texture = ExtResource("8_5pdkb")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="CanvasLayer/front_paralax"]
position = Vector2(-34, -101)
motion_scale = Vector2(3, 3)
motion_mirroring = Vector2(5000, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/front_paralax/ParallaxLayer2"]
position = Vector2(-229, 146)
texture = ExtResource("9_cfnke")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 32.0
offset_top = 32.0
offset_right = 1248.0
offset_bottom = 704.0
color = Color(0.517647, 0.517647, 0.517647, 0.501961)

[node name="Texts" type="Node" parent="CanvasLayer"]

[node name="Title" type="Label" parent="CanvasLayer/Texts"]
offset_left = 288.0
offset_top = 64.0
offset_right = 1048.0
offset_bottom = 128.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("10_j56nl")
theme_override_font_sizes/font_size = 64
text = "SELECTION MENU"

[node name="decs1" type="Label" parent="CanvasLayer/Texts"]
offset_left = 320.0
offset_top = 256.0
offset_right = 968.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("10_j56nl")
theme_override_font_sizes/font_size = 16
text = "Choose a level to play again or to continue your journey."

[node name="decs2" type="Label" parent="CanvasLayer/Texts"]
offset_left = 320.0
offset_top = 448.0
offset_right = 1136.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("10_j56nl")
theme_override_font_sizes/font_size = 16
text = "Explore the stories and trivias you've unlocked throughout your
journey! Revisit key moments and lore that you've unlock through
playing"

[node name="selection" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_dgewl")

[node name="World_icon" parent="CanvasLayer/selection" instance=ExtResource("13_2hqtj")]
offset_left = 256.0
offset_top = 224.0
offset_right = 320.0
offset_bottom = 288.0
script = null

[node name="Label" parent="CanvasLayer/selection/World_icon" index="0"]
offset_right = 226.0
text = "LEVEL SELECT"

[node name="World_icon2" parent="CanvasLayer/selection" instance=ExtResource("13_2hqtj")]
offset_left = 256.0
offset_top = 416.0
offset_right = 320.0
offset_bottom = 480.0
script = null

[node name="Label" parent="CanvasLayer/selection/World_icon2" index="0"]
offset_right = 422.0
text = "UNLOCKED HISTORY COLLECTION"

[node name="player_icon" parent="CanvasLayer/selection" instance=ExtResource("14_yf1as")]
position = Vector2(256, 224)
scale = Vector2(2, 2)

[node name="back" type="TouchScreenButton" parent="CanvasLayer/selection"]
position = Vector2(64, 64)
texture_normal = ExtResource("15_mr3iq")
texture_pressed = ExtResource("16_54nbn")

[node name="android_controls" type="CanvasLayer" parent="."]
layer = 127

[node name="InGameUI" parent="android_controls" instance=ExtResource("17_qnq0s")]
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CanvasLayer/selection/back" to="CanvasLayer/selection" method="_on_back_pressed"]

[editable path="CanvasLayer/selection/World_icon"]
[editable path="CanvasLayer/selection/World_icon2"]
